# clippinator

./: README.md  main.py  package.json  pyproject.toml  todos.md
clippinator/: __main__.py  ctags_tags.txt  todos.md
clippinator/minions/: base_minion.py  executioner.py  prompts.py  specialized_minions.yaml  taskmaster.py
clippinator/project/: project.py  project_summary.py
clippinator/tools/: __init__.py  architectural.py  browsing.py  file_tools.py  subagents.py  utils.py
clippy/: __main__.py  clippy.py  todos.md
clippy/minions/: __init__.py  base_minion.py  executioner.py  memory.py  planner.py  planner_prompt.py  prompts.py  qa.py  special_minions.md  specialized_minions.yaml  taskmaster.py
clippy/project/: project.py  project_summary.py
clippy/tools/: __init__.py  architectural.py  browsing.py  code_tools.py  file_tools.py  subagents.py  templates.yaml  terminal.py  tool.py  utils.py
src/: cli.ts  clippinator.ts  context_management.ts  filesystem_context.ts  llm.ts  prompts.ts  term_agent.ts  toolbox.ts  utils.ts
src/context/: context_management.ts  context_manager_term.ts  context_manager_xml.ts  ctags.ts  filesystem_context.ts
src/environment/: environment.ts  filesystem.ts  terminal.ts
src/prompts/: prompts.ts  promptsXml.ts  prompts_xml.yaml
src/toolbox/: editor.ts  toolbox.ts
