[tool.poetry]
name = "clippy"
version = "0.1.0"
description = ""
authors = ["ennucore <ennucore@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.4"
langchain = "^0.0.140"
rich = "^13.3.4"
typer = "^0.7.0"
python-dotenv = "^1.0.0"
google-search-results = "^2.4.2"
wolframalpha = "^5.0.0"
python-telegram-bot = "^20.2"


[tool.poetry.group.dev.dependencies]
ipython = {version = "^8.12.0", optional = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
